jitfailure-dolfin_expression_9670c3a79551c060ca105f9af3e69dd9/error.log
/tmp/tmpr5j352e3/dolfin_expression_9670c3a79551c060ca105f9af3e69dd9.cpp: In member function ‘virtual void dolfin::dolfin_expression_9670c3a79551c060ca105f9af3e69dd9::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpr5j352e3/dolfin_expression_9670c3a79551c060ca105f9af3e69dd9.cpp:62:26: error: ‘ap’ was not declared in this scope
           values[0] = -2*ap*ap*ap*hp*x[0]/(pow(x[0]*x[0] + ap*ap), 2));
                          ^~
/tmp/tmpr5j352e3/dolfin_expression_9670c3a79551c060ca105f9af3e69dd9.cpp:62:26: note: suggested alternative: ‘hp’
           values[0] = -2*ap*ap*ap*hp*x[0]/(pow(x[0]*x[0] + ap*ap), 2));
                          ^~
                          hp
